[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neoedgex-python-template"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "neoedgex-v4-app-sdk-python==1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
